--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "hammerjs": "^2.0.8",
+        "jump.js": "^1.0.2",
         "laravel-mix-purgecss": "^4.1.0",
         "tailwindcss": "^0.7.4"
     }
