--- a/composer.json
+++ b/composer.json
@@ -8,21 +8,23 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2.5",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.0",
-        "laravel/helpers": "^1.1",
-        "laravel/tinker": "^1.0",
+        "laravel/framework": "^7.0",
+        "laravel/helpers": "^1.2",
+        "laravel/tinker": "^2.0",
         "mcamara/laravel-localization": "^1.3",
-        "spatie/laravel-sitemap": "^5.3"
+        "spatie/laravel-sitemap": "^5.3",
+        "facade/ignition": "^2.0",
+        "laravel/ui": "^2.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "nunomaduro/collision": "^4.1",
+        "phpunit/phpunit": "^8.0"
     },
     "config": {
         "optimize-autoloader": true,
